# support-team-manager

./: .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
bot/: __init__.py  __main__.py  config.py
bot/database/: models.py  session.py
bot/handlers/: common.py
docs/: data-model.md  product.md  tech.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
plans/: 001-initial-setup.md
